*embedly-1.8.0 (17 Jun 2013)

	17 Jun 2013: Felipe Elias Philipp <felipeelias@gmail.com>
	Abstracts http client to allow for custom requesters

	17 Jun 2013: Nitesh <me@coffeebite.com>
	Gets key from Embedly::Configuration

*embedly-1.7.0 (17 Jun 2013)

	17 Jun 2013: Anton Dieterle <antondie@gmail.com>
	Adds Net::HTTP::Proxy support

*embedly-1.6.0 (2 Apr 2013)

	2 Apr 2013: Bob Corsaro <bob@embed.ly>
	Adds extract endpoint

*embedly-1.5.6 (23 May 2012)

	23 May 2012: Bob Corsaro <bob@embed.ly>
	Fixes bug where EmbedlyObject fails with nil parameter

*embedly-1.5.5 (11 May 2012)

	11 May 2012: Bob Corsaro <bob@embed.ly>
	Remove Typhoeus as dependency for jruby

*embedly-1.5.0 (22 Nov 2011)

	22 Nov 2011: Russ Bradberry <rbradberry@gmail.com>
	Adds URL length check

*embedly-1.4.1 (17 Nov 2011)

	17 Nov 2011: Bob Corsaro <bob@embed.ly>
	Adds attributions

*embedly-1.4.0 (17 Nov 2011)

	17 Nov 2011: Bob Corsaro <bob@embed.ly>
	Adds timeout support to cli

	18 Oct 2011: Arun Thampi <arun.thampi@gmail.com>
	Adds better error messages

*embedly-1.3.0 (12 Sep 2011)

	12 Sep 2011: Russ Bradberry, Bob Corsaro <bob@embed.ly>
	Adds Typhoeus support

	12 Sep 2011: Russ Bradberry
	Adds timeout support

*embedly-1.2.0 (12 Sep 2011)

	12 Sep 2011: Felipe Elias Philipp <j@felipeelias.info>
	Adds Configuration class to make configuration Embedly simpler

*embedly-1.1.0 (7 Sep 2011)

	7 Sep 2011: Felipe Elias Philipp <j@felipeelias.info>
	Improves CLI

	7 Sep 2011: Bob Corsaro <bob@embed.ly>
	Support OAuth

	7 Sep 2011: Bob Corsaro <bob@embed.ly>
	Update specs


*embedly-1.0.0 (22 Jun 2011)

	22 Jun 2011: Bob Corsaro <bob@embed.ly>
	Support changes to API

	22 Jun 2011: Bob Corsaro <bob@embed.ly>
	Adds header, host and no-key CLI args

	22 Jun 2011: Bob Corsaro <bob@embed.ly>
	Better exception handling

*embedly-0.4.0 (20 May 2011)

	20 May 2011: Bob Corsaro <bob@embed.ly>
	Support hostnames without tlds

	20 May 2011: Bob Corsaro <bob@embed.ly>
	Bug fixes
