@@ -4,11 +4,8 @@ gem "querystring"
 gem "oauth"
 gem "json"
 
-platforms :mri do
-  gem "typhoeus"
-end
-
 group :development do
+  gem "typhoeus"
   gem "jeweler"
   gem "cucumber"
   gem "rake"
@@ -16,4 +13,3 @@ group :development do
   gem "yard"
   gem "aruba"
 end
-
